--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   path_provider: ^2.0.15
   path: ^1.8.2
   flutter_secure_storage: ^8.0.0
+  http: ^0.13.6
+  pull_to_refresh: ^2.0.0
 
 dev_dependencies:
   flutter_test:
